--- a/nosotros/nosotros.html
+++ b/nosotros/nosotros.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="contenedor2cabeza">
-            <a href="/main/main.html">
+            <a href="/index.html">
                 <div class="inicio">
                     <p>INICIO</p>
                 </div>
