--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">      
     <meta name="viewport" content="width=device-width, initial-scale=1.0">      
     <title>Footer Example</title>      
-    <link rel="stylesheet" href="main.css">  
+    <link rel="stylesheet" href="/main/main.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
 </head>  
 <body>    
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="contenedor2cabeza">
-            <a href="/main/main.html">
+            <a href="/index.html">
                 <div class="inicio">
                     <p>INICIO</p>
                 </div>
