--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p>INICIO</p>
                 </div>
             </a>
-            <a href="/producto/producto.html">
+            <a href="/producto/Producto.html">
                 <div class="tienda">
                     <p>TIENDA</p>
                 </div>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="imagen-t">
-                        <img src="imagenes/sneakers3.jpeg" alt="">
+                        <img src="/main/imagenes/sneakers3.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                     <div class="imagen-t">
-                        <img src="imagenes/sneakers3.jpeg" alt="">
+                        <img src="/main/imagenes/sneakers3.jpeg" alt="">
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="imagen-t">
-                        <img src="imagenes/sneakers3.jpeg" alt="">
+                        <img src="/main/imagenes/sneakers3.jpeg" alt="">
                     </div>
                 </div>
             </div>            
@@ -148,9 +148,9 @@
                 </div>
             </div>
             <div class="imagenes">
-                    <img src="imagenes/sneakers4.jpeg" alt="">
-                    <img src="imagenes/sneakers1.jpeg" alt="">
-                    <img src="imagenes/sneakers3.jpeg" alt="">
+                    <img src="/main/imagenes/sneakers4.jpeg" alt="">
+                    <img src="/main/imagenes/sneakers1.jpeg" alt="">
+                    <img src="/main/imagenes/sneakers3.jpeg" alt="">
             </div>
         </div>
     </div>
