Arreglos del CSS Tienda

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="cabeza">
         <div class="contenedor1cabeza">
             <div class="imagenencabezado">
-                <img src="imagenes/Logo.png" alt="logo">
+                <img src="/main/imagenes/Logo.png" alt="logo">
             </div>
             <div class="letra1encabezado">
                 <p>ALL</p>
