--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -26,7 +26,7 @@
                     <p>INICIO</p>
                 </div>
             </a>
-            <a href="/producto/producto.html">
+            <a href="/producto/Producto.html">
                 <div class="tienda">
                     <p>TIENDA</p>
                 </div>
